Implement Agenda detail view

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography" style="background: black">
+<body class="mat-typography" style="background: url('assets/california.jpg') fixed center;">
 <div class="container">
   <app-root></app-root>
 </div>
