--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Retail Cannabis Business</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
